# DeblurGANv2

./: .gitignore  README.md  plan.md  pyproject.toml
configs/: gopro.yaml
src/deblurgan/: __init__.py  config.py  devices.py  metrics.py
src/deblurgan/cli/: evaluate.py  predict.py  train.py
src/deblurgan/inference/: predictor.py  video.py
src/deblurgan/models/: __init__.py  discriminators.py  fpn.py  losses.py  norm.py  registry.py
src/deblurgan/training/: adversarial.py  checkpoint.py  logger.py  schedulers.py  trainer.py  visuals.py
tests/: conftest.py  test_aug.py  test_config.py  test_dataset.py  test_losses.py  test_models.py  test_predictor.py  test_trainer.py
