[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deblurgan2"
version = "2.0.0"
description = "Backbone-agnostic DeblurGAN-v2: a generic FPN deblurring generator over any timm backbone."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "albumentations>=1.4,<3",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "scikit-image>=0.22",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
deblurgan-train = "deblurgan.cli.train:main"
deblurgan-predict = "deblurgan.cli.predict:main"
deblurgan-eval = "deblurgan.cli.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
